[tool.poetry]
name = "my_agent"
version = "0.1.0"
description = "Example LangGraph project for deployment to LangGraph Cloud"
authors = [
    "langchain-ai"
]
packages = [
    { include = "my_agent" },
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
langgraph = "^0.4.8"
langchain_anthropic = "^0.3.0"
langchain_core = "^0.3.0"
langchain_openai = "^0.3.0"
langchain_community = "^0.3.0"
langchain_tavily = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"